@MKrabs hat etwas bullshit geschrieben

--- a/bericht.tex
+++ b/bericht.tex
@@ -38,7 +38,7 @@
 %% Angaben zur Arbeit
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\newcommand{\Autor}{Marc Mustermann}
+\newcommand{\Autor}{chatGPT, by openAI}
 \newcommand{\MatrikelNummer}{4711}
 \newcommand{\Kursbezeichnung}{tinf17b3}
 
@@ -62,7 +62,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\newcommand{\Titel}{\LaTeX-Vorlage für diverse Ausarbeitungen\\--\\oder so ähnlich}
+\newcommand{\Titel}{CNNs - nur Ideen weil ich gestresst bin und etwas schreiben lassen wollte} % Titel der Arbeit
 \newcommand{\AbgabeDatum}{1. April 2090}
 
 \newcommand{\Dauer}{12 Wochen}
@@ -84,9 +84,14 @@
 % Wenn \includeonly{..} benutzt wird, werden nur diese Kaptitel ausgegeben.
 \includeonly{
   abk
- ,kapitel1
- ,kapitel2
- ,changelog
+  ,kapitel1
+  ,kapitel2
+  ,kapitel3
+  ,kapitel4
+  ,kapitel5
+  ,kapitel6
+  ,kapitel7
+  ,changelog
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -155,6 +160,12 @@ auf der \emph{FAQ-Seite} des Studiengangs Informatik zu finden:
 \include{abk}              % Abkürzungsverzeichnis
 \include{kapitel1}
 \include{kapitel2}
+\include{kapitel3}
+\include{kapitel4}
+\include{kapitel5}
+\include{kapitel6}
+\include{kapitel7}
+
 
 % Ab hier beginnt der Anhang
 \appendix
